workspace/crates/osp-cli/src/repl/snapshots/osp_cli__repl__help__tests__repl_help_compact_layout.snap
---
source: crates/osp-cli/src/repl/help.rs
expression: rendered
---
Usage:
  osp [OPTIONS]

Commands:
  help

Options:
  -h, --help
